src/test/ui/impl-trait/nested-return-type2-tait.stderr
error[E0277]: the trait bound `Sendable: Duh` is not satisfied
  --> $DIR/nested-return-type2-tait.rs:25:13
   |
LL | fn foo() -> impl Trait<Assoc = Sendable> {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Duh` is not implemented for `Sendable`
   |
   = help: the trait `Duh` is implemented for `i32`
note: required because of the requirements on the impl of `Trait` for `[closure@$DIR/nested-return-type2-tait.rs:28:5: 28:10]`
  --> $DIR/nested-return-type2-tait.rs:14:31
   |
LL | impl<R: Duh, F: FnMut() -> R> Trait for F {
   |                               ^^^^^     ^

error[E0277]: the trait bound `Sendable: Duh` is not satisfied
  --> $DIR/nested-return-type2-tait.rs:25:42
   |
LL |   fn foo() -> impl Trait<Assoc = Sendable> {
   |  __________________________________________^
LL | |
LL | |
LL | |     || 42
LL | | }
   | |_^ the trait `Duh` is not implemented for `Sendable`
   |
   = help: the trait `Duh` is implemented for `i32`
note: required because of the requirements on the impl of `Trait` for `[closure@$DIR/nested-return-type2-tait.rs:28:5: 28:10]`
  --> $DIR/nested-return-type2-tait.rs:14:31
   |
LL | impl<R: Duh, F: FnMut() -> R> Trait for F {
   |                               ^^^^^     ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
